# test_01

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt_old  Readme.md  _build.sh  _build_mcu.sh  _build_unittest.sh  _clean.sh  _erase.sh  _flash.sh  _unittest.sh  _unittest_build.sh  build_clean.sh  build_mcu.sh  build_unittest.sh  log_build.txt  pyocd.yaml
.devcontainer/: Dockerfile  devcontainer.json  dockerbuild.cmd
App/: fibonacci.cpp  main.c  value.hpp
Device_A31G12x/: A31G12x.h  A31G_startup.c  libs.ld  mem_4k_32k.ld  sections.ld
Device_A31G12x/CMSIS/: cmsis_gcc.h
cmake/: arm-none-eabi-gcc.cmake  arm-none-eabi.cmake  gcc.cmake
tests/: CMakeLists.txt  TestApp.cpp  test_fib.cpp  test_fib2.cpp  test_value.cpp
